<resources>
    <string name="app_name">Pitak</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_register">Sign in</string>
    <string name="prompt_phone_number">Phone</string>
    <string name="prompt_username">Username</string>
    <string name="action_username">Username</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="code">Code</string>
    <string name="sms_containing_code_has_been_sent">We\'ve just sent you an SMS with verification code. Please enter it to verify your phone.</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="title_profile">Profile</string>
    <string name="MainNavHost">MainNavHost</string>
    <string name="AuthNavHost">AuthNavHost</string>
    <string name="AddPostNavHost">AddPostNavHost</string>
    <string name="my_trips">My Trips</string>
    <string name="search_trip">Search Trip</string>
    <string name="authorize">Authorize</string>
    <string name="confirm">Confirm</string>
    <string name="phone_confirmation">Confirmation</string>
    <string name="title_add_car">Add Car</string>
    <string name="add">Add</string>
    <string name="car_plate_number">Plate number</string>
    <string name="air_conditioner">Air conditioner</string>
    <string name="car_year">Car year</string>
    <string name="incorrect_phone_number_format">Number format is incorrect!</string>
    <string name="retry">Retry</string>
    <string name="add_photo">Add photo</string>
    <string name="add_avatar_photo">Add car avatar</string>
    <string name="system_error">System error occurred!</string>
    <string name="petrol">Petrol</string>
    <string name="methane">Methane</string>
    <string name="propane">Propane</string>
    <string name="myCars">My Cars</string>
    <string name="delete">Delete</string>
    <string name="set_default">Set default</string>
    <string name="edit">Edit</string>
    <string name="add_post">Add post</string>
    <string name="title_add_post">Add post</string>
    <string name="destinations">Destinations</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="dateTime">Date and time</string>
    <string name="car_and_text">Car and note</string>
    <string name="preview_post">Preview post</string>
    <string name="price_and_seats">Price and seats</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
    <string name="departure_asap">Departing as soon as full</string>
    <string name="first_part_of_day">Dawn \n(00:00–6:00)</string>
    <string name="second_part_of_day">Forenoon \n(6:00–12:00)</string>
    <string name="third_part_of_day">Afternoon \n(12:00–18:00)</string>
    <string name="fourth_part_of_day">Evening \n(18:00–00:00)</string>
    <string name="first_part_of_day_one_line">Dawn (00:00–6:00)</string>
    <string name="second_part_of_day_one_line">Forenoon (6:00–12:00)</string>
    <string name="third_part_of_day_one_line">Afternoon (12:00–18:00)</string>
    <string name="fourth_part_of_day_one_line">Evening (18:00–00:00)</string>
    <string name="time">Time</string>
    <string name="day">Day</string>
    <string name="price_for_one_passenger">Price for one passenger</string>
    <string name="number_of_seats">Number of seats</string>
    <string name="please_add_notes_if_needed">Please add notes if needed…</string>
    <string name="your_car_for_this_ride">Your car for this ride</string>
    <string name="asap">ASAP</string>
    <string name="departure_date_and_time">Date: %1$s Time: %2$s</string>
    <string name="price_and_seats_format">Price: %1$s * Seats: %2$s</string>
    <string name="anytime">Any time</string>
    <string name="active">Active</string>
    <string name="history">History</string>
    <string name="no_active_orders">You have no active trips…</string>
    <string name="no_history_posts">You have no history posts…</string>
    <string name="action_sign_out">Sign out</string>
    <string name="price_range">Price range</string>
    <string name="apply">Apply</string>
    <string name="today">Today</string>
    <string name="no_posts_found">No posts found…</string>
    <string name="reset">Reset</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="do_you_want_to_accept_this_offer">Do you want to accept this offer?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sure_to_delete_post">Are you sure you want to delete this post?</string>
    <string name="have_you_completed_the_ride">Have you completed this ride?</string>
    <string name="post">Post: %1$d</string>
    <string name="do_you_want_to_cancel_this_offer">Do you want to cancel this offer?</string>
    <string name="jump_in">Jump in</string>
    <string name="offer_a_ride">Offer a ride</string>
    <string name="send_offer">Send offer</string>
    <string name="message">Message</string>
    <string name="my_price">My price</string>
    <string name="search">Search</string>
    <string name="are_you_sure_to_sign_out">Are you sure you want to sign out?</string>
    <string name="request_sms_again_in">Didn\'t get the code? You can request again in: 00:%1$s</string>
    <string name="request_sms_again">Request code again!</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_post">Edit post</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="there_are_no_posts_yet_come_back_later">There are no posts yet, come back later!</string>
    <string name="sum">Sum</string>
    <string name="select_your_trip_if_you_have_one">Select your existing trip, otherwise we will create a new trip for you!</string>
    <string name="offering_post_id">Offering post ID: %1$d</string>
    <string name="we_will_create_an_order_for_you">We will create an order for you with the destinations of the passenger post!</string>
    <string name="no_passengers_yet">You have no passengers for this trip yet.</string>
    <string name="your_passengers">Your passengers</string>
    <string name="offers">Offers</string>
    <string name="settings">Settings</string>
    <string name="cancel">Bekor qilish</string>
    <string name="ok">Ok</string>
    <string name="please_add_your_car_first">Please describe your car first.</string>
    <string name="start">Start</string>
    <string name="waiting">Waiting</string>
    <string name="on_the_way">On the way</string>
    <string name="canceled">Canceled</string>
    <string name="completed">Completed</string>
    <string name="rejected">Rejected</string>
    <string name="boarding">Boarding</string>
    <string name="language">Language</string>
    <string name="you_have_reached_post_limit">You have reached the post limit!</string>
    <string name="app_version_too_old">The version of the app is too old! Please update from Google Play Market.</string>
    <string name="finish">Finish</string>
    <string name="go_to_play_market">Go to Play Market</string>
    <string name="sure_to_delete_this_passenger">Are you sure that you want to delete this passenger?</string>
    <string name="my_last_offer">My last offer</string>
    <string name="attached_post_id">Attached post id</string>
    <string name="price">Price</string>
    <string name="update_offer">Update offer</string>
    <string name="you_have_no_offers_yet_come_back_later">You have no offers yet, please come back later!</string>
    <string name="close">Close</string>
    <string name="passengers">Passengers</string>
    <string name="price_for_one">Price for one</string>
    <string name="seats">Seats</string>
    <string name="willing_price_for_one">Willing price for one</string>
    <string name="any">∞</string>
    <string name="agreed_price">Agreed price: %1$s Sums</string>
    <string name="add_post_btn_description">Click this button in order to make a post about your planned trip!</string>
    <string name="got_it">Got it</string>
    <string name="no_notifications_yet">No notifications yet...</string>
    <string name="date">Date</string>
    <string name="can_take_package">Can take package</string>
    <string name="no_destination_found">Yo\'nalish topilmadi...</string>
    <string name="enter_search_location">Manzilni kiriting...</string>
    <string name="parcel">Po\'chta</string>
    <string name="only_package">Faqat pochta</string>
    <string name="minimal_price">Minimal xizmat narxi</string>
    <string name="accept">Qabul qilish</string>
    <string name="parcel_offers">Po\'chta takliflar</string>
    <string name="you_have_no_parcel_offers_yet_come_back_later">Po\'chtaga takliflar mavjud emas...</string>
    <string name="no_parcels_yet">You have no accepted parcels yet.</string>
    <string name="your_parcels">Sizning pochtalaringiz</string>
    <string name="sure_to_delete_this_parcel">Вы уверены, что хотите удалить эту посылку?</string>
    <string name="decline">Decline</string>
    <string name="call">Call</string>

</resources>
